[tool.poetry]
name = "Enabler" # noqa
version = "0.1" # noqa
description = "Enabler is a CLI application built for making life easier when working on microservice-based applications. Through this package we can create, edit and execute custom commands to configure microservices." # noqa
authors = ["Your Name <your@email.com>"]  # noqa

[tool.poetry.dependencies]
click = "7.1.1" # noqa
click-log = "0.3.2" # noqa
click-spinner = "0.1.8" # noqa
docker = "4.2.0" # noqa
gitpython = "3.1.41" # noqa
paramiko = "^2.7.1" # noqa
semver = "^2.9.1" # noqa
cryptography = "^2.9.1" # noqa
flake8 = "^7.0.0" # noqa

[build-system]
requires = ["poetry-core>=1.0.0"] # noqa
build-backend = "poetry.core.masonry.api" # noqa

