[tool.poetry]
name = "enabler_keitaro_inc"
version = "0.1.2"
description = "Enabler is a CLI application built for making life easier when working on microservice-based applications. Through this package we can create, edit and execute custom commands to configure microservices."
authors = ["Keitaro Inc. <info@keitaro.com>"]
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/keitaroinc/enabler"
Issues = "https://github.com/keitaroinc/enabler/issues"

[tool.poetry.dependencies]
click = "^7.1"
click-log = "^0.3.2"
click-spinner = "^0.1.8"
docker = "^4.2.0"
gitpython = "^3.1.41"
paramiko = "^2.7.1"
semver = "^2.9.1"
cryptography = "39.0.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

